# evolution-data-server

./: CMakeLists.txt  config.h.in  evolution-data-server.pc.in
addressbook/libebook/: libebook.pc.in
addressbook/libebook-contacts/: CMakeLists.txt  libebook-contacts.pc.in
addressbook/libedata-book/: CMakeLists.txt  libedata-book.pc.in
calendar/backends/caldav/: e-cal-backend-caldav.c
calendar/libecal/: libecal.pc.in
calendar/libedata-cal/: libedata-cal.pc.in
camel/: CMakeLists.txt  camel-lock.c  camel-movemail.c  camel-vee-folder.c  camel-vee-store.c
camel/providers/imapx/: CMakeLists.txt
camel/providers/local/: CMakeLists.txt
camel/providers/nntp/: CMakeLists.txt
camel/providers/pop3/: CMakeLists.txt
camel/providers/sendmail/: CMakeLists.txt
camel/providers/smtp/: CMakeLists.txt
camel/tests/: CMakeLists.txt
camel/tests/lib/: CMakeLists.txt
cmake/: verify-news-file.sh
cmake/modules/: CheckTarget.cmake  CodeCoverageGCOV.cmake  DistTarget.cmake  DistTargets.cmake  FindIntltool.cmake  FindKRB5.cmake  FindLDAP.cmake  FindSMIME.cmake  GLibTools.cmake  GObjectIntrospection.cmake  GtkDoc.cmake  InstalledTests.cmake  PkgConfigEx.cmake  PrintableOptions.cmake  SetupBuildFlags.cmake  SetupCompilerWarningFlags.cmake  UninstallTarget.cmake
docs/reference/: CMakeLists.txt
docs/reference/eds/: CMakeLists.txt  eds-docs.sgml.in
examples/: CMakeLists.txt
examples/cursor/: CMakeLists.txt
libebackend/: CMakeLists.txt  libebackend.pc.in
libedataserver/: CMakeLists.txt  Makefile.am  e-data-server-util.c  e-soup-auth-bearer.c  e-source-credentials-provider-impl-google.c  e-source.c  libedataserver.h  libedataserver.pc.in
libedataserverui/: e-credentials-prompter-impl-google.c  e-credentials-prompter.c  libedataserverui.pc.in
modules/: CMakeLists.txt
modules/google-backend/: module-google-backend.c
modules/ubuntu-online-accounts/: CMakeLists.txt
po/: CMakeLists.txt
private/: CMakeLists.txt
services/evolution-source-registry/: CMakeLists.txt  Makefile.am  evolution-source-registry-autoconfig.c  evolution-source-registry.c
src/libedataserver/: e-source-autoconfig.c  e-source-autoconfig.h
src/services/evolution-source-registry/: evolution-source-registry-autoconfig.c  evolution-source-registry.c
tests/book-migration/: CMakeLists.txt
tests/book-migration/db/: CMakeLists.txt
vala/: CMakeLists.txt
